@@ -5,11 +5,10 @@ import java.awt.Color;
 import java.awt.Font;
 import java.awt.Graphics;
 import java.awt.image.BufferedImage;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
+import java.util.concurrent.ThreadLocalRandom;
 
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
@@ -36,20 +35,18 @@ public class SampleDecals extends HelpSubcommandData {
         List<String> decals = Mapper.getDecals().stream()
             .filter(decalID -> ChangeUnitDecal.userMayUseDecal(event.getUser().getId(), decalID))
             .collect(Collectors.toList());
-        ;
+
         OptionMapping input = event.getOption(Constants.DECAL_HUE);
         if (input == null || input.getAsString().equals("ALL") || input.getAsString().equals("")) {
         } else if (input.getAsString().equals("Other")) {
-            List<String> others = Arrays.asList(new String[] { "cb_10", "cb_10", "cb_52", "cb_81" });
+            List<String> others = List.of("cb_10", "cb_11", "cb_52", "cb_81");
             decals = decals.stream()
                 .filter(decalID -> others.contains(decalID))
                 .collect(Collectors.toList());
-            ;
         } else {
             decals = decals.stream()
                 .filter(decalID -> Mapper.getDecalName(decalID).contains(input.getAsString()))
                 .collect(Collectors.toList());
-            ;
         }
         Collections.sort(decals);
         if (decals.size() == 0) {
@@ -90,8 +87,7 @@ public class SampleDecals extends HelpSubcommandData {
             int mid = -1;
             int i = label.indexOf(" ");
             while (i >= 0) {
-                if (Math.abs(label.length() / 2.0 - 0.5 - mid) + (n % 2) > Math.abs(label.length() / 2.0 - 0.5 - i)) // the (n%2) means that tie breaks will alternate each decal, hopefully reducing collisions
-                {
+                if (Math.abs(label.length() / 2.0 - 0.5 - mid) + (n % 2) > Math.abs(label.length() / 2.0 - 0.5 - i)) { // the (n%2) means that tie breaks will alternate each decal, hopefully reducing collisions
                     mid = i;
                 }
                 i = label.indexOf(" ", i + 1);
